tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/string/bad-codepoint.stderr
TOML parse error at line 1, column 76
  |
1 | invalid-codepoint = "This string contains a non scalar unicode codepoint \uD801"
  |                                                                            ^
invalid unicode 4-digit hex code
value is out of range
